--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html,
-body,
-#root {
+body > #root > div {
   height: 100vh;
+  min-height: 100vh;
 }
